# CPU_Scheduler

./: Application.cpp  Application.h  CMakeLists.txt  Dependencies.cmake  README.md  glad.c  gpch.h  main.cpp
Graphics/: SchedulerUI.cpp  SchedulerUI.h  Theme.h
Logic/: FCFS.cpp  FCFS.h  Preemptive.cpp  Preemptive.h  SchedulerCommon.h
Logic/IO/: CsvIO.cpp  CsvIO.h
glad/include/glad/: glad.h
